fix header link inheriting wrong color

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     font-size: 24px;
 }
 
+#header-link {
+    color: #e5e7eb;
+}
+
 .hero-main-text {
     color: #f9faf8;
     font-size: 48px;
